# election-2082

./: .env.example  .gitignore  CANDIDATE_DATA_SOURCES.md  README.md  docker-compose.yml  election_result_2082.json
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  build.sh  entrypoint.sh  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt
backend/app/: urls.py
backend/app/apps/candidates/: admin.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
backend/app/apps/candidates/management/commands/: import_fptp.py
backend/app/apps/candidates/migrations/: 0001_initial.py  0002_add_trigram_indexes.py  0003_candidate_address_en_and_more.py
backend/app/apps/elections/: admin.py  models.py  serializers.py  urls.py  views.py
backend/app/apps/elections/migrations/: 0001_initial.py
backend/app/apps/parties/: admin.py  models.py  serializers.py  urls.py  views.py
backend/app/apps/parties/migrations/: 0001_initial.py
backend/app/core/: bilingual.py  pagination.py  transliterate.py
backend/app/core/management/commands/: transliterate_all.py
backend/app/settings/: base.py  dev.py  prod.py
frontend/: .env.production  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/contexts/: language-context.tsx  theme-context.tsx
frontend/src/hooks/: use-api.ts  use-cursor-pagination.ts  use-filters.ts  use-language.ts  use-theme.ts
frontend/src/lib/: api-client.ts
nginx/: election-api.conf
(+43 files in other folders)
